[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/nube.png" type="Texture" id=1]
[ext_resource path="res://Sprites/nube_lluvia.png" type="Texture" id=2]
[ext_resource path="res://Nube.gd" type="Script" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "Blanca",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Negra",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 132.504
height = 266.0

[node name="Node" type="Node"]
script = ExtResource( 4 )

[node name="Nube" type="Area2D" parent="."]
position = Vector2( 613, 165 )
scale = Vector2( -0.23999, 0.28 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="spite_nube" type="AnimatedSprite" parent="Nube"]
frames = SubResource( 1 )
animation = "Blanca"

[node name="Colision_nube" type="CollisionShape2D" parent="Nube"]
position = Vector2( 0, 7 )
rotation = 1.57033
shape = SubResource( 2 )

[node name="Sliders" type="Node2D" parent="."]

[node name="LabelTemp" type="Label" parent="Sliders"]
margin_left = 33.0
margin_top = 563.0
margin_right = 114.0
margin_bottom = 577.0
text = "Temperatura"

[node name="HSliderTemp" type="HSlider" parent="Sliders"]
margin_left = 119.0
margin_top = 558.0
margin_right = 288.0
margin_bottom = 584.0
min_value = -10.0
max_value = 45.0

[node name="Label2Viento" type="Label" parent="Sliders"]
margin_left = 322.0
margin_top = 563.0
margin_right = 363.0
margin_bottom = 577.0
text = "Viento"

[node name="HSlider2Viento" type="HSlider" parent="Sliders"]
margin_left = 366.0
margin_top = 563.0
margin_right = 533.0
margin_bottom = 579.0
min_value = -500.0
max_value = 500.0

[connection signal="input_event" from="Nube" to="." method="_on_Nube_input_event"]
[connection signal="input_event" from="Nube" to="Nube" method="_on_Nube_input_event"]
